--- a/references.tex
+++ b/references.tex
@@ -45,6 +45,9 @@ Rudin, Walter.  \textit{Principles of Mathematical Analysis}, 3rd Ed..  McGraw-H
 \bibitem{Steen}
 Steen, Lynn Arthur.  Seebach Jr., J.~Arthur.  \textit{Counterexamples in Topology}.  Holt, Rinehart and Winston Inc..  (1970).
 
+\bibitem{Stein}
+Stein, Elias M.  Shakarchi, Rami.  \textit{Real Analysis---Meas Theory, Integration, and Hilbert Spaces}.  Princeton University Press.  (2005).
+
 \bibitem{Thomas}
 Thomas, J..  \textit{A regular space, not completely regular}.  The American Mathematical Monthly, Vol.~76, No.~2, pp.~181--182.  (1969).
 
