--- a/integration.tex
+++ b/integration.tex
@@ -7,6 +7,7 @@ Okay, so now that my rant is out of the way, let's actually do some mathematics.
 All of integration theory ultimately boils down to measure theory.  The definition of the integral itself is relatively easy.  In fact, the definition of abstract measure spaces is even easier.  There's really no question that writing down the definition of the lebesgue integral is \emph{significantly} easier than that of the riemann integral.  What is a bit tricky, however, is constructing specific measures.  In our case, we will primarily be concerned with constructing lebesgue measure (on $\R ^d$), and this is really the only part that is a bit tricky.  Before we get there though, we will present the theory of measure spaces, and then get to lebesgue measure in the next section.
 
 The intuition behind measure is actually quite easy---a measure is just an axiomatization of our intuition about notion of things like length, area, and volume.  Before we define a measure, it will be convenient to introduce a couple of terms.
+
 \begin{dfn}
 Let $X$ be a set, let $\meas :2^X\rightarrow [0,\infty ]$, and let $\mathcal{M}\subseteq 2^X$.  
 \begin{enumerate}
@@ -69,7 +70,7 @@ This is actually incredibly important, as we shall see that sums are just integr
 \end{rmk}
 \end{exm}
 Before we get to any examples more interesting than this, we will first have to develop a bit of theory.
-\begin{prp}
+\begin{prp}\label{prp5.1.9}
 Let $\meas$ be a measure on a uniform space $X$ with uniformly-measurable base $\widetilde{\mathcal{B}}$ and let $\mathcal{B},\mathcal{C}\in \widetilde{\mathcal{B}}$.  Then, if $\mathcal{B}\preceq \mathcal{C}$ (and in particular if $\mathcal{B}\llcurly \mathcal{C}$), then $\meas (\mathcal{B})\leq \meas (\mathcal{C})$.
 \begin{proof}
 Let $B\in \mathcal{B}$.  Then, there is some $C\in \mathcal{C}$ be such that $B\subseteq C$.  Thus, we have
@@ -81,12 +82,12 @@ Let $B\in \mathcal{B}$.  Then, there is some $C\in \mathcal{C}$ be such that $B\
 Our first relatively significant result, which we shall use to define lebesgue measure on $\R ^d$, is that, to define a measure, it suffices to define a measure on just the sets in a given uniform base.
 \begin{thm}[Carath\'{e}odory's Extension Theorem]\label{CaratheodorysExtensionTheorem}
 \begin{savenotes}
-Let $X$ be a uniform space with uniform base $\widetilde{\mathcal{B}}$ and let $\meas :\bigcup _{\mathcal{B}\in \widetilde{\mathcal{B}}}\mathcal{B}\rightarrow [0,\infty ]$ be such that
+Let $X$ be a uniform space with uniform base $\widetilde{\mathcal{B}}$, let $\mathcal{M}$ be the collection of sets that are a finite union and intersection of elements of $\widetilde{\mathcal{B}}$ and their complements,\footnote{For example, you will see below in the proof that we need to be able to know what the measure of $B\setminus C$ is, for $B,C$ elements of some uniform covers in $\widetilde{\mathcal{B}}$---see \cref{stpCaratheodorysExtensionTheorem.2}, for example.} and let $\meas :\mathcal{M}\rightarrow [0,\infty ]$ be such that
 \begin{enumerate}
 \item \label{CaratheodorysExtensionTheorem.i}$\meas (\emptyset )=0$;
 \item \label{CaratheodorysExtensionTheorem.ii}$\meas (B)=\meas (\Int (B))$ for all $B\in \bigcup _{\mathcal{B}\in \widetilde{\mathcal{B}}}\mathcal{B}$;
 \item \label{CaratheodorysExtensionTheorem.iii}every $\mathcal{B}\in \widetilde{\mathcal{B}}$ is uniformly-measurable with respect to $\meas$; and
-\item \label{CaratheodorysExtensionTheorem.iv}$\meas$ is additive on $\bigcup _{\mathcal{B}\in \widetilde{\mathcal{B}}}\mathcal{B}$.
+\item \label{CaratheodorysExtensionTheorem.iv}$\meas$ is additive.
 \end{enumerate}
 Then,
 \begin{equation}
@@ -109,11 +110,17 @@ These are just verbatim three out of four of the axioms of a measure.  The point
 Once again, to understand the last ``Furthermore, \textellipsis'', think about what this means for metric spaces.  The hypothesis here says that there is some $\varepsilon >0$ so that no $\varepsilon$-ball intersects both sets.  Thus, in this sense, the two sets are at least $\varepsilon >0$ distance apart.  Thus, the general statement should still be interpreted as the statement that, if two sets are `positively-separated', then the measure of the union is the sum of the measures
 \end{rmk}
 \begin{proof}
-Before we begin the `'meat' of the proof, we first prove a couple of lemmas.
-
 On account of \ref{CaratheodorysExtensionTheorem.ii} and \cref{lma5.1.16}, by passing to the interior if necessary, we may without loss of generality assume that each $\mathcal{B}$ is an \emph{open} cover.
-\begin{lma}
+
+Before we begin the `'meat' of the proof, we first prove a lemma.
+\begin{lma}\label{lma5.1.5}
 Let $\widetilde{\mathcal{B}}$ be a uniform base of open covers on a set $X$ and let $B\in \mathcal{B}\in \widetilde{\mathcal{B}}$.  Then, there exists $\widetilde{\mathcal{B}}\ni \mathcal{C}\llcurly \mathcal{B}$ and $C\in \mathcal{C}$ such that $\Star _{\mathcal{C}}(C)\subseteq B$.
+\begin{rmk}
+In other words, you can fit a star inside every element of an \emph{open} uniform cover.
+\end{rmk}
+\begin{rmk}
+This is obviously false if your cover it not open.  For example, you can always do something stupid and just take a uniform cover, add a singleton to it, and then add this new cover to your old uniform base.  If the point is not open, then there's no way you're fitting a star inside it.
+\end{rmk}
 \begin{proof}
 Let $x\in B$.  As $B$ is open, there is some $\mathcal{D}\in \widetilde{\mathcal{B}}$ such that $\Star _{\mathcal{D}}(x)\subseteq B$.  Let $\mathcal{C}$ be a star-refinement of $\mathcal{D}$ and let $C\in \mathcal{C}$ contain $x$.  There is then some $D\in \mathcal{D}$ such that
 \begin{equation}
@@ -122,17 +129,60 @@ Let $x\in B$.  As $B$ is open, there is some $\mathcal{D}\in \widetilde{\mathcal
 \end{proof}
 \end{lma}
 
+\Step{Introduce notation}
 For the time being, let us write
 \begin{equation}
 \breve{\meas}(S)\coloneqq \lim _{\mathcal{B}}\meas _{\mathcal{B}}(S)
 \end{equation}
 with the breve to distinguish it from what we started with.  Once we show they agree, we will drop it.
 
-\Step{Show that $\breve{\meas}(S)=\lim _{\Int{\mathcal{B}}\in \coord{\Int \left( \widetilde{\mathcal{B}}\right) ,\ggcurly}}\meas _{\Int (\mathcal{B})}$}
+Let us also write
+\begin{equation}
+\begin{multlined}
+M_{\mathcal{B}}(S) \coloneqq \left\{ \sum _{m\in \N}\meas (B_m):\right. \\
+\left. S\subseteq \bigcup _{m\in \N}B_m\text{ and  each }k_m\in \mathcal{C}_m\text{ for some }\mathcal{C}_m\in \widetilde{\mathcal{B}}\text{ such that }\mathcal{C}_m\llcurlyeq \mathcal{B}\right. \\
+\left. \text{(or }B_m=\emptyset \text{).}\right\} ,
+\end{multlined}
+\end{equation}
+so that
+\begin{equation}
+\meas _{\mathcal{B}}(S)=\inf (M_{\mathcal{B}}(S)).
+\end{equation}
 
+\Step{Show that if $C\in \mathcal{C}\llcurlyeq \mathcal{B}$, then $\meas _{\mathcal{B}}(C)=\meas (C)$}
+First of all, as $\meas (C)\in M_{\mathcal{B}}(C)$, we have that $\meas _{\mathcal{B}}(C)\leq \meas (C)$.  In particular, if $\meas _{\mathcal{B}}(C)=\infty$, then $\meas (C)=\infty$ as well, and so we may as well assume that $\meas _{\mathcal{B}}(C)$ is finite.  For the other inequality, let $\varepsilon >0$, and let $B_m$ be either empty, an element of $\mathcal{B}$, or an element of some element of $\widetilde{\mathcal{B}}$ that star-refines $\mathcal{B}$, such that $C\subseteq \bigcup _{m\in \N}B_m$, and
+\begin{equation}
+\meas _{\mathcal{B}}(C)\leq \sum _{m\in \N}\meas (B_m)<\meas _{\mathcal{B}}(C)+\varepsilon .
+\end{equation}
+Define
+\begin{equation}
+B_m'\coloneqq C\cap \left( B_m\setminus \bigcup _{k=0}^{m-1}B_k\right) .
+\end{equation}
+Note that (i) each $B_m'\in \mathcal{M}$, (ii) $B_m'\subseteq B_m$, (iii) the $B_m'$s are disjoint, and (iv) $C=\bigcup _{m\in \N}B_m'$.  Thus,
+\begin{equation}
+\meas (C)=\sum _{m\in \N}\meas (B_m')\leq \sum _{m\in \N}\meas (B_m)<\meas _{\mathcal{B}}(C)+\varepsilon .
+\end{equation}
+hence, $\meas (C)\leq \meas _{\mathcal{B}}(C)$, and so $\meas (C)=\meas _{\mathcal{B}}(C)$.
 
-\Step{Show that if $\mathcal{C}\llcurly \mathcal{B}\ni B$, then $\meas _{\mathcal{C}}(B)=\meas (B)$}
-By applying the above lemma a couple of times, we obtain an element $\mathcal{D}\in \widetilde{\mathcal{B}}$ such that (i) $\mathcal{D}\llcurly \mathcal{C}$ and (ii) there is some $D\in \mathcal{D}$ such that $D\subseteq \Star _{\mathcal{D}}(D)\subseteq B$.  Write $B=D\cup (B\setminus D)$.  Then, as $\meas$ is additive on $\bigcup _{\mathcal{B}'\in \widetilde{\mathcal{B}}}\mathcal{B}'$, we have that $\meas (B)=\meas (D)+\meas (B\setminus D)$
+\Step{Show that if $\mathcal{C}\llcurlyeq \mathcal{B}\ni B$, then $\meas _{\mathcal{C}}(B)=\meas (B)$}\label{stpCaratheodorysExtensionTheorem.2}
+First of all, by the previous step, we have that
+\begin{equation}
+\meas _{\mathcal{C}}(B)\geq \meas _{\mathcal{B}}(B)=\meas (B).
+\end{equation}
+Thus, it suffices to show that $\meas _{\mathcal{C}}(B)\leq \meas (B)$.
+
+Apply \cref{lma5.1.5} to obtain a star-refinement $\mathcal{D}$ be of $\mathcal{B}$ with some $D\in \mathcal{D}$ such that $\Star _{\mathcal{D}}(D)\subseteq B$.  Let $\mathcal{E}$ be a common star-refinement of $\mathcal{C}$ and $\mathcal{D}$.  Let $x\in D$ and let $E\in \mathcal{E}$ contain $x$.  Let $D'\in \mathcal{D}$ be such that
+\begin{equation}
+\Star _{\mathcal{E}}(E)\subseteq D'\subseteq \Star _{\mathcal{D}}(D)\subseteq B
+\end{equation}
+(because $D'$ intersects $D$ at $x$).
+
+Thus, we obtain an element $\mathcal{E}\in \widetilde{\mathcal{B}}$ such that (i) $\mathcal{E}\llcurly \mathcal{C}$ and (ii) there is some $E\in \mathcal{E}$ such that $E\subseteq \Star _{\mathcal{E}}(E)\subseteq B$.
+
+Write $B=E\cup (B\setminus E)$.  Then, as $\meas$ is additive on $\mathcal{M}$, we have that
+\begin{equation}
+\meas (B)=\meas (E)+\meas (B\setminus E)\geq \meas (E)\geq \meas (E)=\meas _{\mathcal{C}}(E)
+\end{equation}
 
 \Step{Show that this agrees with what we started with}
 Let $B\in \mathcal{B}$.  We must show that $\breve{\meas (B)}=\meas(\mathcal{B})$.  First of all, $B\in \mathcal{B}$ is a cover of itself, and therefore $\meas _{\mathcal{B}}(B)\leq \meas (B)$.  Therefore, in the limit, we likewise have that $\breve{\meas}(B)\leq \meas (B)$.
@@ -148,19 +198,7 @@ Start by taking $\varepsilon >0$, and choosing $\mathcal{B}_{\varepsilon}\llcurl
 Now let $B_m$ be e
 
 \Step{Show that $\meas _{\mathcal{B}}(S)\geq 0$}
-Let us write
-\begin{equation}
-\begin{split}
-M_{\mathcal{B}}(S) & \coloneqq \left\{ \sum _{m\in \N}\meas (B_m):\right. \\
-& \qquad \left. S\subseteq \bigcup _{m\in \N}B_m\text{ and  each }k_m\in \mathcal{C}_m\text{ for some }\mathcal{C}_m\in \widetilde{\mathcal{B}}\text{ such that }\mathcal{C}_m\llcurlyeq \mathcal{B}\right. \\
-& \qquad \left. \text{(or }B_m=\emptyset \text{).}\right\} ,
-\end{split}
-\end{equation}
-so that
-\begin{equation}
-\meas _{\mathcal{B}}(S)=\inf (M_{\mathcal{B}}(S)).
-\end{equation}
-Note that, as $M_{\mathcal{B}}(S)\subseteq [0,\infty ]$, we always have that $\meas _{\mathcal{B}}(S)\geq 0$.
+As $M_{\mathcal{B}}(S)\subseteq [0,\infty ]$, we always have that $\meas _{\mathcal{B}}(S)\geq 0$.
 
 \Step{Show that $\meas _{\mathcal{B}}(\emptyset )=0$}
 The empty-set itself is a countable cover of $\emptyset$, so that $0\in M_{\mathcal{B}}(\emptyset )$, and hence $\meas _{\mathcal{B}}(\emptyset )\leq 0$.  Of course, we already know that $\meas _{\mathcal{B}})\emptyset \geq 0$, and so $\meas _{\mathcal{B}}(\emptyset )=0$.
