--- a/integration.tex
+++ b/integration.tex
@@ -82,146 +82,72 @@ Let $B\in \mathcal{B}$.  Then, there is some $C\in \mathcal{C}$ be such that $B\
 Our first relatively significant result, which we shall use to define lebesgue measure on $\R ^d$, is that, to define a measure, it suffices to define a measure on just the sets in a given uniform base.
 \begin{thm}[Carath\'{e}odory's Extension Theorem]\label{CaratheodorysExtensionTheorem}
 \begin{savenotes}
-Let $X$ be a uniform space with uniform base $\widetilde{\mathcal{B}}$, let $\mathcal{M}$ be the collection of sets that are a finite union and intersection of elements of $\widetilde{\mathcal{B}}$ and their complements,\footnote{For example, you will see below in the proof that we need to be able to know what the measure of $B\setminus C$ is, for $B,C$ elements of some uniform covers in $\widetilde{\mathcal{B}}$---see \cref{stpCaratheodorysExtensionTheorem.2}, for example.} and let $\meas :\mathcal{M}\rightarrow [0,\infty ]$ be such that
+Let $X$ be a uniform space with uniform base $\widetilde{\mathcal{B}}$, let $\mathcal{M}$ be the collection of sets that are a finite union and intersection of elements of $\widetilde{\mathcal{B}}$ and their complements, and let $\meas :\mathcal{M}\rightarrow [0,\infty ]$ be such that
 \begin{enumerate}
 \item \label{CaratheodorysExtensionTheorem.i}$\meas (\emptyset )=0$;
-\item \label{CaratheodorysExtensionTheorem.ii}$\meas (B)=\meas (\Int (B))$ for all $B\in \bigcup _{\mathcal{B}\in \widetilde{\mathcal{B}}}\mathcal{B}$;
 \item \label{CaratheodorysExtensionTheorem.iii}every $\mathcal{B}\in \widetilde{\mathcal{B}}$ is uniformly-measurable with respect to $\meas$; and
 \item \label{CaratheodorysExtensionTheorem.iv}$\meas$ is additive.
 \end{enumerate}
 Then,
 \begin{equation}
-\meas (S)\coloneqq \lim _{\mathcal{B}\in \coord{\widetilde{\mathcal{B}},\ggcurly}}\meas _{\mathcal{B}}(S),\footnote{The statement that $\widetilde{\mathcal{B}}$ is downward-directed with respect to $\llcurly$ is exactly the statement that it is a directed set with respect to $\ggcurly$, and so the map $\widetilde{\mathcal{B}}\ni \mathcal{B}\mapsto \meas _{\mathcal{B}}(S)\in [0,\infty ]$ is a net.  Note that this limit makes sense because it is nondecreasing, because as $\mathcal{B}$ becomes smaller, the set you are taking the infimum over becomes smaller (there will be less covers that star-refine it, and so the infimum itself becomes bigger.  Thus, by the \nameref{MonotoneConvergenceTheorem} (\cref{MonotoneConvergenceTheorem}),\footnote{If it is bounded above, it converges in $\R$.  If it's not bounded above, it converges to $\infty$.}}
+\meas (S)\coloneqq \inf \left\{ \sum _{m\in \N}\meas (B_m):S\subseteq \bigcup _{m\in \N}M_m\text{ and  each }M_m\in \mathcal{M}\text{ (or }M_m=\emptyset \text{).}\right\} ,\footnote{The point of allowing each $M_m$ to be empty is to allow for finite unions as well.}
 \end{equation}
-where
-\begin{equation}
-\begin{multlined}
-\meas _{\mathcal{B}}(S)\coloneqq \inf \left\{ \sum _{m\in \N}\meas (B_m):\right. \\ \left. S\subseteq \bigcup _{m\in \N}B_m\text{ and  each }B_m\in \mathcal{C}_m\text{ for some }\mathcal{C}_m\in \widetilde{\mathcal{B}}\text{ such that }\mathcal{C}_m\llcurlyeq \mathcal{B}\right. \\ \left. \text{(or }B_m=\emptyset \text{).}\right\} ,\footnote{The point of allowing each $B_m$ to be empty is to allow for finite unions as well.  $\llcurly$ means star-refines \emph{or} is equal to.  In particular, the elements of the covers are are allowed to come from $\mathcal{B}$ itself.}
-\end{multlined}
-\end{equation}
-is the unique measure on $X$ which agrees with $\meas$ on $\bigcup _{\mathcal{B}\in \widetilde{\mathcal{B}}}\mathcal{B}$.  Furthermore, $\meas$ satisfies the property that, for $S,T\subseteq X$, if there exists a cover $\mathcal{B}\in \widetilde{\mathcal{B}}$ of which no element intersects both $S$ and $T$, then
-\begin{equation}
-\meas (S\cup T)=\meas (S)+\meas (T).
-\end{equation}
+is the unique measure on $X$ which agrees with $\meas$ on $\mathcal{M}$.
 \begin{rmk}
 These are just verbatim three out of four of the axioms of a measure.  The point is that, to define a measure, it suffices to define them on sets coming from a given uniform base.  Furthermore, you also do not have to check subadditivity of your original definition.
 \end{rmk}
-\begin{rmk}
-Once again, to understand the last ``Furthermore, \textellipsis'', think about what this means for metric spaces.  The hypothesis here says that there is some $\varepsilon >0$ so that no $\varepsilon$-ball intersects both sets.  Thus, in this sense, the two sets are at least $\varepsilon >0$ distance apart.  Thus, the general statement should still be interpreted as the statement that, if two sets are `positively-separated', then the measure of the union is the sum of the measures
-\end{rmk}
 \begin{proof}
-On account of \ref{CaratheodorysExtensionTheorem.ii} and \cref{lma5.1.16}, by passing to the interior if necessary, we may without loss of generality assume that each $\mathcal{B}$ is an \emph{open} cover.
-
-Before we begin the `'meat' of the proof, we first prove a lemma.
-\begin{lma}\label{lma5.1.5}
-Let $\widetilde{\mathcal{B}}$ be a uniform base of open covers on a set $X$ and let $B\in \mathcal{B}\in \widetilde{\mathcal{B}}$.  Then, there exists $\widetilde{\mathcal{B}}\ni \mathcal{C}\llcurly \mathcal{B}$ and $C\in \mathcal{C}$ such that $\Star _{\mathcal{C}}(C)\subseteq B$.
-\begin{rmk}
-In other words, you can fit a star inside every element of an \emph{open} uniform cover.
-\end{rmk}
-\begin{rmk}
-This is obviously false if your cover it not open.  For example, you can always do something stupid and just take a uniform cover, add a singleton to it, and then add this new cover to your old uniform base.  If the point is not open, then there's no way you're fitting a star inside it.
-\end{rmk}
-\begin{proof}
-Let $x\in B$.  As $B$ is open, there is some $\mathcal{D}\in \widetilde{\mathcal{B}}$ such that $\Star _{\mathcal{D}}(x)\subseteq B$.  Let $\mathcal{C}$ be a star-refinement of $\mathcal{D}$ and let $C\in \mathcal{C}$ contain $x$.  There is then some $D\in \mathcal{D}$ such that
-\begin{equation}
-\Star _{\mathcal{C}}(C)\subseteq D\subseteq \Star _{\mathcal{D}}(x)\subseteq B.
-\end{equation}
-\end{proof}
-\end{lma}
-
 \Step{Introduce notation}
 For the time being, let us write
 \begin{equation}
-\breve{\meas}(S)\coloneqq \lim _{\mathcal{B}}\meas _{\mathcal{B}}(S)
+\breve{\meas}(S)\coloneqq \inf (M(S))
 \end{equation}
-with the breve to distinguish it from what we started with.  Once we show they agree, we will drop it.
+with the breve to distinguish it from what we started with, where
+\begin{equation}
+M(S) \coloneqq \left\{ \sum _{m\in \N}\meas (B_m):S\subseteq \bigcup _{m\in \N}M_m\text{ and  each }M_m\in \mathcal{M}\text{ (or }M_m=\emptyset \text{).}\right\} .
+\end{equation}
+(Once we show that this indeed agrees with what we started with, we shall drop the breve.)
 
-Let us also write
+\Step{Show that $\breve{\meas}(S)=\meas (S)$ for $S\in \mathcal{M}$}
+First of all, as $\meas (S)\in M(S)$, we have that $\breve{\meas}(S)\leq \meas (S)$.  In particular, if $\breve{\meas}(S)=\infty$, then $\meas (S)=\infty$ as well, and so we may as well assume that $\breve{\meas}(S)$ is finite.  For the other inequality, let $\varepsilon >0$, and let $M_m\in \mathcal{M}$ (or empty) be such that (i) $S\subseteq \bigcup _{m\in \N}M_m$ and (ii)
 \begin{equation}
-\begin{multlined}
-M_{\mathcal{B}}(S) \coloneqq \left\{ \sum _{m\in \N}\meas (B_m):\right. \\
-\left. S\subseteq \bigcup _{m\in \N}B_m\text{ and  each }k_m\in \mathcal{C}_m\text{ for some }\mathcal{C}_m\in \widetilde{\mathcal{B}}\text{ such that }\mathcal{C}_m\llcurlyeq \mathcal{B}\right. \\
-\left. \text{(or }B_m=\emptyset \text{).}\right\} ,
-\end{multlined}
-\end{equation}
-so that
-\begin{equation}
-\meas _{\mathcal{B}}(S)=\inf (M_{\mathcal{B}}(S)).
-\end{equation}
-
-\Step{Show that if $C\in \mathcal{C}\llcurlyeq \mathcal{B}$, then $\meas _{\mathcal{B}}(C)=\meas (C)$}
-First of all, as $\meas (C)\in M_{\mathcal{B}}(C)$, we have that $\meas _{\mathcal{B}}(C)\leq \meas (C)$.  In particular, if $\meas _{\mathcal{B}}(C)=\infty$, then $\meas (C)=\infty$ as well, and so we may as well assume that $\meas _{\mathcal{B}}(C)$ is finite.  For the other inequality, let $\varepsilon >0$, and let $B_m$ be either empty, an element of $\mathcal{B}$, or an element of some element of $\widetilde{\mathcal{B}}$ that star-refines $\mathcal{B}$, such that $C\subseteq \bigcup _{m\in \N}B_m$, and
-\begin{equation}
-\meas _{\mathcal{B}}(C)\leq \sum _{m\in \N}\meas (B_m)<\meas _{\mathcal{B}}(C)+\varepsilon .
+\breve{\meas}(S)\leq \sum _{m\in \N}\meas (M_m)<\breve{\meas}(S)+\varepsilon .
 \end{equation}
 Define
 \begin{equation}
-B_m'\coloneqq C\cap \left( B_m\setminus \bigcup _{k=0}^{m-1}B_k\right) .
+M_m'\coloneqq S\cap \left( M_m\setminus \bigcup _{k=0}^{m-1}M_k\right) .
 \end{equation}
-Note that (i) each $B_m'\in \mathcal{M}$, (ii) $B_m'\subseteq B_m$, (iii) the $B_m'$s are disjoint, and (iv) $C=\bigcup _{m\in \N}B_m'$.  Thus,
+Note that (i) each $M_m'\in \mathcal{M}$, (ii) $M_m'\subseteq M_m$, (iii) the $M_m'$s are disjoint, and (iv) $S=\bigcup _{m\in \N}M_m'$.  Thus,
 \begin{equation}
-\meas (C)=\sum _{m\in \N}\meas (B_m')\leq \sum _{m\in \N}\meas (B_m)<\meas _{\mathcal{B}}(C)+\varepsilon .
+\meas (S)=\sum _{m\in \N}\meas (M_m')\leq \sum _{m\in \N}\meas (M_m)<\breve{\meas}(S)+\varepsilon .
 \end{equation}
-hence, $\meas (C)\leq \meas _{\mathcal{B}}(C)$, and so $\meas (C)=\meas _{\mathcal{B}}(C)$.
+Hence, $\meas (S)\leq \breve{\meas (S)}$, and so $\meas (S)=\breve{\meas}(S)$.  Thus, hereafter, we drop the breve.
 
-\Step{Show that if $\mathcal{C}\llcurlyeq \mathcal{B}\ni B$, then $\meas _{\mathcal{C}}(B)=\meas (B)$}\label{stpCaratheodorysExtensionTheorem.2}
-First of all, by the previous step, we have that
+\Step{Show that $\meas (S)\geq 0$}
+As $M(S)\subseteq [0,\infty ]$, we always have that $\meas (S)\geq 0$.
+
+\Step{Show that $\meas (\emptyset )=0$}
+The empty-set itself is a countable cover of $\emptyset$, so that $0\in M(\emptyset )$, and hence $\meas (\emptyset )\leq 0$.  Of course, we already know that $\meas (\emptyset )\geq 0$, and so $\meas (\emptyset )=0$.
+
+\Step{Show that $\meas$ is nondecreasing}
+If $S\subseteq T$, then $M(S)\supseteq M(T)$, and so, taking the infimum, we have that $\meas (S)\leq \meas (T)$.
+
+\Step{Show that $\meas$ is subadditive on $2^X$}
+Let $\{ M_m:m\in \N \} \subseteq 2^X$.  If $\meas (M_m)=\infty$ for any $m\in \N$, then because $\meas$ is nondecreasing, we would likewise have that
 \begin{equation}
-\meas _{\mathcal{C}}(B)\geq \meas _{\mathcal{B}}(B)=\meas (B).
+\meas \left( \bigcup _{m\in \N}M_m\right) \geq \meas (M_m)=\infty ,
 \end{equation}
-Thus, it suffices to show that $\meas _{\mathcal{C}}(B)\leq \meas (B)$.
-
-Apply \cref{lma5.1.5} to obtain a star-refinement $\mathcal{D}$ be of $\mathcal{B}$ with some $D\in \mathcal{D}$ such that $\Star _{\mathcal{D}}(D)\subseteq B$.  Let $\mathcal{E}$ be a common star-refinement of $\mathcal{C}$ and $\mathcal{D}$.  Let $x\in D$ and let $E\in \mathcal{E}$ contain $x$.  Let $D'\in \mathcal{D}$ be such that
+and so in this case we are done.  Thus, we may as well assume without loss of generality that each $\meas (M_m)$ is finite.  Let $\varepsilon >0$.  Then,\footnote{This is why we needed finiteness.} there are $M_{m,n}\in \mathcal{M}\cup \{ \emptyset \}$, such that
 \begin{equation}
-\Star _{\mathcal{E}}(E)\subseteq D'\subseteq \Star _{\mathcal{D}}(D)\subseteq B
+\meas _(M_m)\leq \sum _{n\in \N}\meas (M_{m,n})<\meas (M_m)+\tfrac{\varepsilon}{2^m}.
 \end{equation}
-(because $D'$ intersects $D$ at $x$).
-
-Thus, we obtain an element $\mathcal{E}\in \widetilde{\mathcal{B}}$ such that (i) $\mathcal{E}\llcurly \mathcal{C}$ and (ii) there is some $E\in \mathcal{E}$ such that $E\subseteq \Star _{\mathcal{E}}(E)\subseteq B$.
-
-Write $B=E\cup (B\setminus E)$.  Then, as $\meas$ is additive on $\mathcal{M}$, we have that
+As $\bigcup _{m\in \N}M_m\subseteq \bigcup _{m,n\in \N}M_{m,n}$, we thus have that
 \begin{equation}
-\meas (B)=\meas (E)+\meas (B\setminus E)\geq \meas (E)\geq \meas (E)=\meas _{\mathcal{C}}(E)
-\end{equation}
-
-\Step{Show that this agrees with what we started with}
-Let $B\in \mathcal{B}$.  We must show that $\breve{\meas (B)}=\meas(\mathcal{B})$.  First of all, $B\in \mathcal{B}$ is a cover of itself, and therefore $\meas _{\mathcal{B}}(B)\leq \meas (B)$.  Therefore, in the limit, we likewise have that $\breve{\meas}(B)\leq \meas (B)$.
-
-For the other inequality, we first do the case in which $\breve{m}(B)=\infty$.  Then, for every $M>0$, there must be some $\mathcal{B}_M$ that star-refines $\mathcal{B}$ and such that
-\begin{equation}
-\meas _{\mathcal{B}_M}(B)>M.
-\end{equation}
-Start by taking $\varepsilon >0$, and choosing $\mathcal{B}_{\varepsilon}\llcurly \mathcal{B}$ and such that
-\begin{equation}
-\breve{m}(B)-\meas _{\mathcal{B}_{\varepsilon }}(B)<\varepsilon .
-\end{equation}
-Now let $B_m$ be e
-
-\Step{Show that $\meas _{\mathcal{B}}(S)\geq 0$}
-As $M_{\mathcal{B}}(S)\subseteq [0,\infty ]$, we always have that $\meas _{\mathcal{B}}(S)\geq 0$.
-
-\Step{Show that $\meas _{\mathcal{B}}(\emptyset )=0$}
-The empty-set itself is a countable cover of $\emptyset$, so that $0\in M_{\mathcal{B}}(\emptyset )$, and hence $\meas _{\mathcal{B}}(\emptyset )\leq 0$.  Of course, we already know that $\meas _{\mathcal{B}})\emptyset \geq 0$, and so $\meas _{\mathcal{B}}(\emptyset )=0$.
-
-\Step{Show that $\meas _{\mathcal{B}}$ is nondecreasing}
-If $S\subseteq T$, then $M_{\mathcal{B}}(S)\supseteq M_{\mathcal{B}}(T)$, and so, taking the infimum, we have that $\meas _{\mathcal{B}}(S)\leq \meas _{\mathcal{B}}(T)$.
-
-\Step{Show that $\meas _{\mathcal{B}}$ is subadditive on $2^X$}
-Let $\{ M_m:m\in \N \} \subseteq 2^X$.  If $\meas _{\mathcal{B}}(M_m)=\infty$ for any $m\in \N$, then because $\meas _{\mathcal{B}}$ is nondecreasing, we would likewise have that
-\begin{equation}
-\meas _{\mathcal{B}}\left( \bigcup _{m\in \N}M_m\right) \geq \meas _{\mathcal{B}}(M_m)=\infty ,
-\end{equation}
-and so in this case we are done.  Thus, we may as well assume without loss of generality that each $\meas _{\mathcal{B}}(M_m)$ is finite.  Let $\varepsilon >0$.  Then,\footnote{This is why we needed finiteness.} there are $B_{m,n}$ elements of some star-refinement of $\mathcal{B}$ such that
-\begin{equation}
-\meas _{\mathcal{B}}(M_m)\leq \sum _{n\in \N}\meas (B_{m,n})<\meas _{\mathcal{B}}(M_m)+\tfrac{\varepsilon}{2^m}.
-\end{equation}
-As $\bigcup _{m\in \N}M_m\subseteq \bigcup _{m,n\in \N}B_{m,n}$, we thus have that
-\begin{equation}
-\meas _{\mathcal{B}}\left( \bigcup _{m\in \N}M_m\right) \leq \sum _{m,n\in \N}\meas (B_{m,n})<\sum _{m\in \N}\left[ \meas _{\mathcal{B}}(M_m)+\tfrac{\varepsilon}{2^m}\right] =\sum _{m\in \N}\meas _{\mathcal{B}}(M_m)+\varepsilon .
+\meas \left( \bigcup _{m\in \N}M_m\right) \leq \sum _{m,n\in \N}\meas (M_{m,n})<\sum _{m\in \N}\left[ \meas (M_m)+\tfrac{\varepsilon}{2^m}\right] =\sum _{m\in \N}\meas (M_m)+\varepsilon .
 \end{equation}
 Thus, indeed,
 \begin{equation}
-\meas _{\mathcal{B}}\left( \bigcup _{m\in \N}M_m\right) \leq \sum _{m\in \N}\meas _{\mathcal{B}}(M_m).
+\meas _{\mathcal{B}}\left( \bigcup _{m\in \N}M_m\right) \leq \sum _{m\in \N}\meas (M_m).
 \end{equation}
 \end{proof}
 \end{savenotes}
