--- a/references.tex
+++ b/references.tex
@@ -3,11 +3,17 @@
 \bibitem{Abbott}
 Abbot, Stephen.  \textit{Understanding Analysis}.  Springer-Verlag UTM.  (2010).
 
+\bibitem{Cohn}
+Cohn, Donald L..  \textit{Measure Theory}, 2nd Ed..  Springer.  (2013).
+
 \bibitem{Coleman}
 Coleman, Mark.  \textit{Continuous functions nowhere differentiable}.  \href{http://www.maths.manchester.ac.uk/~mdc/MATH20101/notesPermanant/Contsnondiff.pdf}{Constnondiff.pdf}
 
 \bibitem{Gelbaum}
 Gelbaum, Bernard R.; Olmsted, John M.~H..  \textit{Counterexamples in Analysis}.  Dover Publications Inc..  (1992).
+
+\bibitem{Gleason}
+Gleason, Jonathan.  \textit{Existence and uniqueness of haar measure}.  (2010).  \url{https://www.academia.edu/740208/Existence_and_Uniqueness_of_Haar_Measure}.
 
 \bibitem{Grayson}
 Grayson, Daniel R..  \textit{Zorn's Lemma}.
@@ -17,6 +23,9 @@ Hart, K.~P.; Nagata, J.; Vaughn, J.~E..  \textit{Encyclopedeia of General Topolo
 
 \bibitem{Honig}
 H\"{o}nig, Chaim Samuel.  \textit{Proof of the well-ordering of cardinal numbers}
+
+\bibitem{Howes}
+Howes, Norman R..  \textit{Modern Analysis and Toology}.  Springer-Verlag Universitext.  (1991).
 
 \bibitem{Isbell}
 Isbell, J.~R.~.  \textit{Uniform spaces}.  American Mathematical Society.  (1964).
