Pre-Stein metric-outer-measure proof removal

--- a/main.tex
+++ b/main.tex
@@ -132,6 +132,10 @@
 R )$ to Taylor's Theorem to Clairut's Theorem.
 
 \item Inverse Function Theorem
+
+\item Nonmeasurable set
+
+\item FIx step count
 \end{itemize}
 
 
