--- a/topology.tex
+++ b/topology.tex
@@ -1584,7 +1584,7 @@ Then, if $C\subseteq [0,1]$ closed contains $\frac{1}{2}$, $f^{-1}(C)$ contains 
 
 But now we've gone through all the separation properties, right?  How could $T_3$ be a thing?  Well, now we enter a collection of separation axioms of a different nature---now we will focus on separating \emph{closed sets}.  One unfortunate fact, however, is that, if points are not closed, then these new separation axioms are \emph{not} strictly stronger than the separation axioms we just presented.  There are thus two versions of the following separation axioms:  ones in which the points are closed and ones in which they aren't.
 \begin{dfn}[Regular]\label{Regular}
-$X$ is \emph{regular}\index{Regular (topological space)} iff any closed set can be separated by neighborhoods from a point.
+$X$ is \emph{regular}\index{Regular (topological space)} iff any closed set and a point not contained in it can be separated by neighborhoods.
 \begin{rmk}
 You'll note that we skipped right over being topologically-distinguishable and just being separated.  This is because a point is automatically separated from a closed set---the complement of the closed set is an open neighborhood of the point which does not intersect the closed set.
 \end{rmk}
